# Android-Crack

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SPEC.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
android_crack/: __init__.py  __main__.py  app.py
android_crack/api/: server.py
android_crack/capabilities/: apps.py  comms.py  connect.py  device.py  diagnostics.py  exploit.py  exports.py  files.py  info.py  media.py  network.py  shell.py  wifi.py
android_crack/core/: adb_client.py  audit.py  device_pool.py  plugin_loader.py  settings.py  tool_finder.py
android_crack/plugins/examples/: parallel_info.py  uptime.py
android_crack/ui/: banner.py  cli.py  tui.py
docs/: architecture.md  authorization.md  plugin-api.md  ui-preview.html
tests/: test_smoke.py
